Fixed an issue with num too long in domain and fixed(?) css scroll cutoff issue

--- a/App/ClientApp/src/app/scrawler-result/scrawler-result.component.css
+++ b/App/ClientApp/src/app/scrawler-result/scrawler-result.component.css
@@ -1,5 +1,17 @@
 #wheeler {
     color: aliceblue;
     font-size: 10vw;
+    white-space: nowrap;
+    overflow: visible;
     background-image: linear-gradient(black, rgb(0, 0, 83));
+}
+
+#hiddenText {
+    opacity: 0.3;
+    transition-property: opacity;
+    transition-duration: 300ms;
+}
+
+#hiddenText:focus-within, #hiddenText:hover {
+    opacity: 1.0;
 }
